--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^18.3.18",
     "@types/react-beautiful-dnd": "^13.1.8",
-    "@types/react-dom": "^18.3.5",
     "cra-template-typescript": "1.2.0",
-    "react": "^18.3.1",
+    "react": "18",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "18",
     "react-icons": "^5.4.0",
     "react-scripts": "5.0.1"
   },
@@ -36,5 +34,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.24.0",
+    "@typescript-eslint/parser": "^8.24.0",
+    "typescript": "^5.7.3"
   }
 }
