--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react-beautiful-dnd": "^13.1.8",
     "cra-template-typescript": "1.2.0",
+    "gh-pages": "^6.3.0",
     "react": "18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +44,6 @@
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
     "typescript": "^5.7.3"
-  }
+  },
+  "homepage": "https://aimthesun.github.io/react-typescript-taskwise"
 }
